Bug 479858 - Cursor shape didn't recover when close a split
Summary: Cursor shape didn't recover when close a split
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: split-view (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-15 16:58 UTC by liuerfire Wang
Modified: 2024-02-23 00:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
a video shows what happened (466.71 KB, video/x-matroska)
2024-01-15 16:58 UTC, liuerfire Wang
Details

Note You need to log in before you can comment on or make changes to this bug.
Description liuerfire Wang 2024-01-15 16:58:53 UTC
Created attachment 164921 [details]
a video shows what happened

STEPS TO REPRODUCE
1.  split mulitple views
2.  close some views

OBSERVED RESULT

the cursor shape in the focused view is still the unfocused shape 

EXPECTED RESULT

the cursor shape should become the focused shape.
Comment 1 Bug Janitor Service 2024-01-21 19:42:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/947
Comment 2 Kurt Hindenburg 2024-02-23 00:32:33 UTC
Git commit 91a38d19b003c31e538086d15f6535857fdd481d by Kurt Hindenburg, on behalf of Carlos Alves.
Committed on 20/02/2024 at 23:57.
Pushed by hindenburg into branch 'master'.

fix: Issue with focus setting on wdg after relocating to a new splitter

The bug is a problem where the widget was not receiving focus after
being moved to a new splitter (not clear why). The solution involves
connecting it to a signal, introducing a delay for the focus request.

The `deleteLater` call has been removed. This isn't necessary because
the old splitter after lose the remaining widget will subsequently
trigger the `childEvent` with `count == 0` and be deleted.

M  +1    -2    src/widgets/ViewSplitter.cpp

https://invent.kde.org/utilities/konsole/-/commit/91a38d19b003c31e538086d15f6535857fdd481d